cmake_minimum_required (VERSION 2.8.11)
project (stations CXX)

add_executable(read_ints_and_keep_primes_only read_ints_and_keep_primes_only.cpp)
add_executable(generate_random_ints_and_sort_them generate_random_ints_and_sort_them.cpp)

target_include_directories(read_ints_and_keep_primes_only PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_link_libraries (read_ints_and_keep_primes_only ${CMAKE_THREAD_LIBS_INIT})

target_include_directories(generate_random_ints_and_sort_them PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_link_libraries (generate_random_ints_and_sort_them ${CMAKE_THREAD_LIBS_INIT})
